--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
 tower-http = { version = "0.6.6", features = ["cors"] }
 tower_governor = "0.7.0"
+utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions"] }
+utoipa-axum = "0.2.0"
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 uuid = { version = "1.17.0", features = ["v4"] }
