--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ axum = { version = "0.8.4", features = ["http2", "macros"] }
 axum-limit = "0.1.0-alpha.2"
 chrono = { version = "0.4.41", features = ["serde"] }
 dotenv = "0.15.0"
+regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
